# ncnn-playground

./: .gitignore  flake.nix  main.cpp  meson.build  types.hpp  utils.cpp  utils.hpp
nanodet/: nanodet.cpp  nanodet.hpp  nanodet.param
nix/: ncnn_pc.patch
nix/cpp-mjpeg-streamer/: default.nix
nix/ncnn-playground/: default.nix
